crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__functions__function_named_arg_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/functions.rs
assertion_line: 39
expression: "goto_definition(r#\"\n%! main.sp\nint bar(int foo=1) {}\nint baz(int foo=1) {}\n\nvoid foo() {\n    bar(.foo=baz(.foo=1));\n              |\n              ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 4,
        "character": 13
      },
      "end": {
        "line": 4,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 21
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    }
  }
]
