crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__functions__function_named_arg_4.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/functions.rs
assertion_line: 56
expression: "goto_definition(r#\"\n%! main.sp\nint bar(int foo=1) {}\nint baz(int foo=1) {}\n\nvoid foo() {\n    int qux = 1;\n    bar(.foo=baz(.foo=qux));\n                       |\n                       ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 5,
        "character": 22
      },
      "end": {
        "line": 5,
        "character": 25
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 4,
        "character": 8
      },
      "end": {
        "line": 4,
        "character": 15
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 4,
        "character": 8
      },
      "end": {
        "line": 4,
        "character": 11
      }
    }
  }
]
